# nongshim_USA_runtime

./: .gitignore  CLAUDE.md  pyproject.toml  start.sh
backend/: collection.py  history_db.py  main.py  storage.py
configs/: README_PaddleOCR.md  default_config.json  global_settings.json  global_settings.json.example  paddleocr_date_check.json  paddleocr_date_check_accurate.json  paddleocr_date_check_balanced.json
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  config.ts  index.css
frontend/src/components/: CameraCard.tsx  Layout.tsx  LineModal.tsx  PasswordModal.tsx  S3ConfigModal.tsx  Sidebar.tsx  StatsCard.tsx  StatusBadge.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Admin.tsx  Collection.tsx  Dashboard.tsx  History.tsx  Lines.tsx  Storage.tsx
frontend/src/types/: index.ts
inspection_framework/: README.md  camera.py  config.py  datamanager.py  detector.py  detector_cnn.py  detector_paddleocr.py  detector_yolo.py  example_pinhole.py  inspection_runtime.py  inspection_worker.py  rejecter.py  webcam_camera.py
workers/worker-01/: config.json
